// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Checkbox > renders with ariaLabel correctly 1`] = `
"<label class="flex items-start flex-row text-sm">
  <div class="flex items-center h-5"><button aria-label="Aria label" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked">
      <!---->
      <!---->
    </button></div>
  <div class="ms-2 w-full">
    <p class="block font-medium text-(--ui-text)" for="v-0"></p>
    <!--v-if-->
  </div>
</label>"
`;

exports[`Checkbox > renders with as correctly 1`] = `
"<label class="flex items-start flex-row text-sm">
  <div class="flex items-center h-5"><button class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked">
      <!---->
      <!---->
    </button></div>
  <div class="ms-2 w-full">
    <p class="block font-medium text-(--ui-text)" for="v-0"></p>
    <!--v-if-->
  </div>
</label>"
`;

exports[`Checkbox > renders with class correctly 1`] = `
"<label class="flex items-start flex-row text-sm">
  <div class="flex items-center h-5"><button class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked">
      <!---->
      <!---->
    </button></div>
  <div class="ms-2 w-full">
    <p class="block font-medium text-(--ui-text)" for="v-0"></p>
    <!--v-if-->
  </div>
</label>"
`;

exports[`Checkbox > renders with color neutral correctly 1`] = `
"<label class="flex items-start flex-row text-sm">
  <div class="flex items-center h-5"><button class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring-inset focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-border-inverted) me-2 size-4 ring-2 ring-(--ui-border-inverted) bg-(--ui-bg-inverted)" id="v-0" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked"><span data-state="checked" style="pointer-events: none;" class="flex items-center justify-center size-full rounded-(--ui-radius) after:bg-(--ui-bg) after:size-1.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="shrink-0 size-full" width="1em" height="1em" viewBox="0 0 16 16"></svg></span>
      <!---->
    </button></div>
  <div class="ms-2 w-full">
    <p class="block font-medium text-(--ui-text)" for="v-0"></p>
    <!--v-if-->
  </div>
</label>"
`;

exports[`Checkbox > renders with defaultValue correctly 1`] = `
"<label class="flex items-start flex-row text-sm">
  <div class="flex items-center h-5"><button class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring-inset focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4 ring-2 ring-(--ui-primary) bg-(--ui-primary)" id="v-0" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked"><span data-state="checked" style="pointer-events: none;" class="flex items-center justify-center size-full rounded-(--ui-radius) after:bg-(--ui-bg) after:size-1.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="shrink-0 size-full" width="1em" height="1em" viewBox="0 0 16 16"></svg></span>
      <!---->
    </button></div>
  <div class="ms-2 w-full">
    <p class="block font-medium text-(--ui-text)" for="v-0"></p>
    <!--v-if-->
  </div>
</label>"
`;

exports[`Checkbox > renders with description correctly 1`] = `
"<label class="flex items-start flex-row text-sm">
  <div class="flex items-center h-5"><button class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked">
      <!---->
      <!---->
    </button></div>
  <div class="ms-2 w-full">
    <p class="block font-medium text-(--ui-text)" for="v-0">Label</p>
    <p class="text-(--ui-text-muted)">Description</p>
  </div>
</label>"
`;

exports[`Checkbox > renders with description slot correctly 1`] = `
"<label class="flex items-start flex-row text-sm">
  <div class="flex items-center h-5"><button class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked">
      <!---->
      <!---->
    </button></div>
  <div class="ms-2 w-full">
    <p class="block font-medium text-(--ui-text)" for="v-0">Description slot</p>
    <!--v-if-->
  </div>
</label>"
`;

exports[`Checkbox > renders with disabled correctly 1`] = `
"<label class="flex items-start flex-row text-sm">
  <div class="flex items-center h-5"><button class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4 cursor-not-allowed opacity-75" id="v-0" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-disabled="" disabled="">
      <!---->
      <!---->
    </button></div>
  <div class="ms-2 w-full">
    <p class="block font-medium text-(--ui-text) cursor-not-allowed opacity-75" for="v-0"></p>
    <!--v-if-->
  </div>
</label>"
`;

exports[`Checkbox > renders with icon correctly 1`] = `
"<label class="flex items-start flex-row text-sm">
  <div class="flex items-center h-5"><button class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked">
      <!---->
      <!---->
    </button></div>
  <div class="ms-2 w-full">
    <p class="block font-medium text-(--ui-text)" for="v-0"></p>
    <!--v-if-->
  </div>
</label>"
`;

exports[`Checkbox > renders with id correctly 1`] = `
"<label class="flex items-start flex-row text-sm">
  <div class="flex items-center h-5"><button class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="id" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked">
      <!---->
      <!---->
    </button></div>
  <div class="ms-2 w-full">
    <p class="block font-medium text-(--ui-text)" for="id"></p>
    <!--v-if-->
  </div>
</label>"
`;

exports[`Checkbox > renders with indeterminate correctly 1`] = `
"<label class="flex items-start flex-row text-sm">
  <div class="flex items-center h-5"><button class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring-inset focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4 ring-2 ring-(--ui-primary) bg-(--ui-primary)" id="v-0" role="checkbox" type="button" aria-checked="mixed" aria-required="false" data-state="indeterminate"><span data-state="indeterminate" style="pointer-events: none;" class="flex items-center justify-center size-full rounded-(--ui-radius) after:bg-(--ui-bg) after:size-1.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="shrink-0 size-full" width="1em" height="1em" viewBox="0 0 16 16"></svg></span>
      <!---->
    </button></div>
  <div class="ms-2 w-full">
    <p class="block font-medium text-(--ui-text)" for="v-0"></p>
    <!--v-if-->
  </div>
</label>"
`;

exports[`Checkbox > renders with indeterminateIcon correctly 1`] = `
"<label class="flex items-start flex-row text-sm">
  <div class="flex items-center h-5"><button class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring-inset focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4 ring-2 ring-(--ui-primary) bg-(--ui-primary)" id="v-0" role="checkbox" type="button" aria-checked="mixed" aria-required="false" data-state="indeterminate"><span data-state="indeterminate" style="pointer-events: none;" class="flex items-center justify-center size-full rounded-(--ui-radius) after:bg-(--ui-bg) after:size-1.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="shrink-0 size-full" width="1em" height="1em" viewBox="0 0 16 16"></svg></span>
      <!---->
    </button></div>
  <div class="ms-2 w-full">
    <p class="block font-medium text-(--ui-text)" for="v-0"></p>
    <!--v-if-->
  </div>
</label>"
`;

exports[`Checkbox > renders with label correctly 1`] = `
"<label class="flex items-start flex-row text-sm">
  <div class="flex items-center h-5"><button class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked">
      <!---->
      <!---->
    </button></div>
  <div class="ms-2 w-full">
    <p class="block font-medium text-(--ui-text)" for="v-0">Label</p>
    <!--v-if-->
  </div>
</label>"
`;

exports[`Checkbox > renders with label slot correctly 1`] = `
"<label class="flex items-start flex-row text-sm">
  <div class="flex items-center h-5"><button class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked">
      <!---->
      <!---->
    </button></div>
  <div class="ms-2 w-full">
    <p class="block font-medium text-(--ui-text)" for="v-0">Label slot</p>
    <!--v-if-->
  </div>
</label>"
`;

exports[`Checkbox > renders with modelValue correctly 1`] = `
"<label class="flex items-start flex-row text-sm">
  <div class="flex items-center h-5"><button class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring-inset focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4 ring-2 ring-(--ui-primary) bg-(--ui-primary)" id="v-0" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked"><span data-state="checked" style="pointer-events: none;" class="flex items-center justify-center size-full rounded-(--ui-radius) after:bg-(--ui-bg) after:size-1.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="shrink-0 size-full" width="1em" height="1em" viewBox="0 0 16 16"></svg></span>
      <!---->
    </button></div>
  <div class="ms-2 w-full">
    <p class="block font-medium text-(--ui-text)" for="v-0"></p>
    <!--v-if-->
  </div>
</label>"
`;

exports[`Checkbox > renders with name correctly 1`] = `
"<label class="flex items-start flex-row text-sm">
  <div class="flex items-center h-5"><button class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked">
      <!---->
      <!---->
    </button></div>
  <div class="ms-2 w-full">
    <p class="block font-medium text-(--ui-text)" for="v-0"></p>
    <!--v-if-->
  </div>
</label>"
`;

exports[`Checkbox > renders with required correctly 1`] = `
"<label class="flex items-start flex-row text-sm">
  <div class="flex items-center h-5"><button class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0" role="checkbox" type="button" aria-checked="false" aria-required="true" data-state="unchecked">
      <!---->
      <!---->
    </button></div>
  <div class="ms-2 w-full">
    <p class="block font-medium text-(--ui-text) after:content-['*'] after:ms-0.5 after:text-(--ui-error)" for="v-0">Label</p>
    <!--v-if-->
  </div>
</label>"
`;

exports[`Checkbox > renders with size lg correctly 1`] = `
"<label class="flex items-start flex-row text-sm">
  <div class="flex items-center h-5"><button class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4.5" id="v-0" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked">
      <!---->
      <!---->
    </button></div>
  <div class="ms-2 w-full">
    <p class="block font-medium text-(--ui-text)" for="v-0"></p>
    <!--v-if-->
  </div>
</label>"
`;

exports[`Checkbox > renders with size md correctly 1`] = `
"<label class="flex items-start flex-row text-sm">
  <div class="flex items-center h-5"><button class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked">
      <!---->
      <!---->
    </button></div>
  <div class="ms-2 w-full">
    <p class="block font-medium text-(--ui-text)" for="v-0"></p>
    <!--v-if-->
  </div>
</label>"
`;

exports[`Checkbox > renders with size sm correctly 1`] = `
"<label class="flex items-start flex-row text-xs">
  <div class="flex items-center h-4"><button class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-3.5" id="v-0" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked">
      <!---->
      <!---->
    </button></div>
  <div class="ms-2 w-full">
    <p class="block font-medium text-(--ui-text)" for="v-0"></p>
    <!--v-if-->
  </div>
</label>"
`;

exports[`Checkbox > renders with size xl correctly 1`] = `
"<label class="flex items-start flex-row text-base">
  <div class="flex items-center h-6"><button class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-5" id="v-0" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked">
      <!---->
      <!---->
    </button></div>
  <div class="ms-2 w-full">
    <p class="block font-medium text-(--ui-text)" for="v-0"></p>
    <!--v-if-->
  </div>
</label>"
`;

exports[`Checkbox > renders with size xs correctly 1`] = `
"<label class="flex items-start flex-row text-xs">
  <div class="flex items-center h-4"><button class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-3" id="v-0" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked">
      <!---->
      <!---->
    </button></div>
  <div class="ms-2 w-full">
    <p class="block font-medium text-(--ui-text)" for="v-0"></p>
    <!--v-if-->
  </div>
</label>"
`;

exports[`Checkbox > renders with ui correctly 1`] = `
"<label class="flex items-start flex-row text-sm">
  <div class="flex items-center h-5"><button class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked">
      <!---->
      <!---->
    </button></div>
  <div class="w-full ms-4">
    <p class="block font-medium text-(--ui-text)" for="v-0"></p>
    <!--v-if-->
  </div>
</label>"
`;

exports[`Checkbox > renders with value correctly 1`] = `
"<label class="flex items-start flex-row text-sm">
  <div class="flex items-center h-5"><button class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked">
      <!---->
      <!---->
    </button></div>
  <div class="ms-2 w-full">
    <p class="block font-medium text-(--ui-text)" for="v-0"></p>
    <!--v-if-->
  </div>
</label>"
`;
